проміжна робота форми

--- a/index.html
+++ b/index.html
@@ -489,11 +489,63 @@
             </li>
           </ul>
         </section>
+        <section class="subscription">
+          <h2 class="subscription-title li-title">Подпишитесь на рассылку</h2>
+          <form action="">
+            <input type="email" id="footer-form" />
+            <label for="footer-form">
+              <button class="button subscription-button" type="submit">
+                Подписаться
+                <svg class="footer-icon">
+                  <use href="./images/svg/iconmoon.svg#icon-send"></use>
+                </svg>
+              </button>
+            </label>
+          </form>
+          <!-- <button class="button subscription-button" type="submit">
+            Подписаться
+            <svg class="footer-icon">
+              <use href="./images/svg/iconmoon.svg#icon-send"></use>
+            </svg>
+          </button> -->
+        </section>
       </div>
     </footer>
+
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" data-modal-close class="icon-close"></button>
+        <h2 class="modal-title">Оставьте свои данные, мы вам перезвоним</h2>
+        <form action="" class="form">
+          <div class="form-field">
+            <label for="name" class="form-label">Имя</label>
+            <input type="text" class="form-input" id="name" placeholder=" " />
+            <svg class="icon-input">
+              <use href="./images/svg/iconmoon.svg#icon-person"></use>
+            </svg>
+          </div>
+          <div class="form-field">
+            <label for="name" class="form-label">Телефон</label>
+            <input type="tel" class="form-input" id="name" placeholder=" " />
+            <svg class="icon-input">
+              <use href="./images/svg/iconmoon.svg#icon-phone"></use>
+            </svg>
+          </div>
+          <div class="form-field">
+            <label for="name" class="form-label">Почта</label>
+            <input type="email" class="form-input" id="name" placeholder=" " />
+            <svg class="icon-input">
+              <use href="./images/svg/iconmoon.svg#icon-email"></use>
+            </svg>
+          </div>
+          <div>
+            <input type="checkbox" class="checkbox" id="checkbox" />
+            <label for="checkbox" class="checkbox-label"
+              >Соглашаюсь с рассылкой и принимаю
+              <a href="">Условия договора</a>
+            </label>
+          </div>
+        </form>
       </div>
 
       <script src="./js/modal.js"></script>
