Додає оформлення форм в модал

--- a/index.html
+++ b/index.html
@@ -539,9 +539,14 @@
             </svg>
           </div>
           <div>
-            <input type="checkbox" class="checkbox" id="checkbox" />
-            <label for="checkbox" class="checkbox-label"
-              >Соглашаюсь с рассылкой и принимаю
+            <label for="checkbox" class="checkbox-label">
+              <input
+                type="checkbox"
+                class="checkbox visually-hidden"
+                id="checkbox"
+              />
+              <span class="checkbox-icon"></span>
+              Соглашаюсь с рассылкой и принимаю
               <a href="">Условия договора</a>
             </label>
           </div>
