Додає розмітку і оформлення форм

--- a/index.html
+++ b/index.html
@@ -491,32 +491,43 @@
         </section>
         <section class="subscription">
           <h2 class="subscription-title li-title">Подпишитесь на рассылку</h2>
-          <form action="">
-            <input type="email" id="footer-form" />
-            <label for="footer-form">
-              <button class="button subscription-button" type="submit">
-                Подписаться
-                <svg class="footer-icon">
-                  <use href="./images/svg/iconmoon.svg#icon-send"></use>
-                </svg>
-              </button>
-            </label>
-          </form>
-          <!-- <button class="button subscription-button" type="submit">
+          <div class="subscription-box">
+            <form>
+              <label for="footer-form" class="footer-label">
+                <input
+                  type="email"
+                  id="footer-form"
+                  class="footer-input"
+                  placeholder="E-mail"
+                />
+              </label>
+            </form>
+            <button class="button subscription-button" type="submit">
+              Подписаться
+              <svg class="subscription-icon">
+                <use href="./images/svg/iconmoon.svg#icon-send"></use>
+              </svg>
+            </button>
+            <!-- <button class="button subscription-button" type="submit">
             Подписаться
             <svg class="footer-icon">
               <use href="./images/svg/iconmoon.svg#icon-send"></use>
             </svg>
           </button> -->
+          </div>
         </section>
       </div>
     </footer>
 
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
-        <button type="button" data-modal-close class="icon-close"></button>
+        <button type="button" data-modal-close class="close">
+          <svg class="icon-close">
+            <use href="./images/svg/iconmoon.svg#icon-close"></use>
+          </svg>
+        </button>
         <h2 class="modal-title">Оставьте свои данные, мы вам перезвоним</h2>
-        <form action="" class="form">
+        <form class="form">
           <div class="form-field">
             <label for="name" class="form-label">Имя</label>
             <input type="text" class="form-input" id="name" placeholder=" " />
@@ -525,20 +536,30 @@
             </svg>
           </div>
           <div class="form-field">
-            <label for="name" class="form-label">Телефон</label>
-            <input type="tel" class="form-input" id="name" placeholder=" " />
+            <label for="phone" class="form-label">Телефон</label>
+            <input type="tel" class="form-input" id="phone" placeholder=" " />
             <svg class="icon-input">
               <use href="./images/svg/iconmoon.svg#icon-phone"></use>
             </svg>
           </div>
           <div class="form-field">
-            <label for="name" class="form-label">Почта</label>
-            <input type="email" class="form-input" id="name" placeholder=" " />
+            <label for="email" class="form-label">Почта</label>
+            <input type="email" class="form-input" id="email" placeholder=" " />
             <svg class="icon-input">
               <use href="./images/svg/iconmoon.svg#icon-email"></use>
             </svg>
           </div>
-          <div>
+          <div class="form-field">
+            <label for="textarea" class="form-label">Комментарий </label>
+            <textarea
+              name="Комментарий"
+              id="textarea"
+              class="textarea"
+              placeholder="Введите текст"
+            ></textarea>
+          </div>
+
+          <div class="slave-box">
             <label for="checkbox" class="checkbox-label">
               <input
                 type="checkbox"
@@ -547,10 +568,13 @@
               />
               <span class="checkbox-icon"></span>
               Соглашаюсь с рассылкой и принимаю
-              <a href="">Условия договора</a>
+              <a href="" class="checkbox-link">Условия договора</a>
             </label>
           </div>
         </form>
+        <div class="submit-box">
+          <button type="submit" class="submit-button">Отправить</button>
+        </div>
       </div>
 
       <script src="./js/modal.js"></script>
