Додає виправллення за рекомендацією ментора

--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
             <use href="./images/svg/iconmoon.svg#icon-close"></use>
           </svg>
         </button>
-        <h2 class="modal-title">Оставьте свои данные, мы вам перезвоним</h2>
+        <p class="modal-title">Оставьте свои данные, мы вам перезвоним</p>
         <form class="form">
           <div class="form-field">
             <label for="name" class="form-label">Имя</label>
@@ -549,7 +549,7 @@
               <use href="./images/svg/iconmoon.svg#icon-email"></use>
             </svg>
           </div>
-          <div class="form-field">
+          <div class="form-field form-textarea">
             <label for="textarea" class="form-label">Комментарий </label>
             <textarea
               name="Комментарий"
@@ -570,14 +570,12 @@
               Соглашаюсь с рассылкой и принимаю
               <a href="" class="checkbox-link">Условия договора</a>
             </label>
+            <button type="submit" class="submit-button">Отправить</button>
           </div>
         </form>
-        <div class="submit-box">
-          <button type="submit" class="submit-button">Отправить</button>
-        </div>
       </div>
-
-      <script src="./js/modal.js"></script>
     </div>
+
+    <script src="./js/modal.js"></script>
   </body>
 </html>
